k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rdicidr-service
  namespace: production
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 80
      protocol: TCP
  selector:
    app: rdicidr
